<resources>
    <string name="app_name">Metris</string>
    <string name="app_name_header">metris</string>

    <string name="app_description">Metris membantu Anda untuk memulai liburan yang tak terlupakan</string>

    <string name="welcome_button_start">Mulai</string>

    <string name="welcome_textview_already">Sudah memiliki akun?</string>
    <string name="welcome_textview_login">Masuk</string>
    <string name="intro_button_register_now">Daftar sekarang!</string>

    <string name="intro_1_textview_title">Memesan paket</string>
    <string name="intro_1_textview_subtitle_1">Banyak pilihan</string>
    <string name="intro_1_textview_subtitle_2">paket wisata</string>
    <string name="intro_1_textview_content">Tersedia berbagai jenis paket wisata alam dan bahari, tinggal pilih yang kamu suka!</string>

    <string name="intro_2_textview_title">Memesan penjemputan</string>
    <string name="intro_2_textview_subtitle_1">Tak ada kendaraan?</string>
    <string name="intro_2_textview_subtitle_2">Tak masalah!</string>
    <string name="intro_2_textview_content">Ingin ke pantai tapi tidak memiliki kendaraan pribadi? Mudah! Kami menyediakan jasa penjemputan.</string>

    <string name="intro_3_textview_title">Membantu kearifan lokal</string>
    <string name="intro_3_textview_subtitle_1">Alam, budaya,</string>
    <string name="intro_3_textview_subtitle_2">dan kearifan lokal</string>
    <string name="intro_3_textview_content">Setiap desa menawarkan budaya dan keindahan alam yang dikemas dalam paket wisata menarik.</string>

    <string name="intro_4_textview_title">Melindungi alam</string>
    <string name="intro_4_textview_subtitle_1">Alam perlu dilindungi</string>
    <string name="intro_4_textview_subtitle_2">dengan konservasi</string>
    <string name="intro_4_textview_content">Tidak hanya menikmati alam dan bidaya, tapi kamu juga turut serta dalam konservasi alam!</string>

    <string name="register_title_1">Daftar sekali</string>
    <string name="register_title_2">untung berkali-kali!</string>
    <string name="register_other_option_register">atau daftar melalui</string>
    <string name="register_button_next">Lanjutkan</string>
    <string name="register_button_register">Daftar</string>

    <string name="input_hint_name">masukkan nama</string>
    <string name="input_hint_emai">masukkan email</string>
    <string name="input_hint_password">masukkan password</string>
    <string name="input_hint_retype_password">ulangi password</string>
    <string name="input_hint_ktp">masukkan nomor KTP</string>
    <string name="input_hint_phone">masukkan nomor telepon</string>
    <string name="input_hint_address">masukkan alamat</string>
    <string name="input_hint_province">pilih provinsi</string>
    <string name="input_hint_city">pilih kota</string>

    <string name="registered_title_1">Selesai!</string>
    <string name="registered_title_2">Kini berlibur</string>
    <string name="registered_title_3">akan semakin mudah.</string>
    <string name="registered_button_login">Masuk</string>

    <string name="login_button_login">Masuk</string>
    <string name="login_title_1">Selangkah lebih dekat</string>
    <string name="login_title_2">dari liburan!</string>
    <string name="login_forget_password">Lupa sandi?</string>
    <string name="login_dont_have_account">Belum memiliki akun?</string>
    <string name="login_textview_register">Daftar</string>

    <string name="forget_button_setup">Atur ulang sandi</string>
    <string name="forget_title_1">Mungkin kamu lupa</string>
    <string name="forget_title_2">karena butuh liburan!</string>

    <string name="title_home">Beranda</string>
    <string name="title_mytrips">Perjalanan Saya</string>
    <string name="title_myaccount">Akun Saya</string>
    <string name="title_others">Lainnya</string>

    <string name="topay_title">Anda belum memiliki trip belum dibayar</string>
    <string name="topay_subtitle">Trip yang belum dibayar akan ditampilkan disini</string>
    <string name="completed_title">Anda belum memiliki trip selesai</string>
    <string name="completed_subtitle">Trip yang telah selesai akan ditampilkan disini</string>
    <string name="upcoming_title">Anda belum memiliki trip mendatang</string>
    <string name="upcoming_subtitle">Trip mendatang akan ditampilkan disini</string>

    <string name="mytrips_tab1">Belum dibayar</string>
    <string name="mytrips_tab2">Mendatang</string>
    <string name="mytrips_tab3">Selesai</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="default_value">-</string>

    <string name="myaccount_edit_button">Sunting</string>

    <string name="others_sub_information">Informasi</string>
    <string name="others_sub_account">Akun Saya</string>
    <string name="others_sub_application">Aplikasi</string>

    <string name="others_help">Bantuan</string>
    <string name="others_language">Bahasa</string>
    <string name="others_call_us">Hubungi Kami</string>
    <string name="others_about_us">Tentang Kami</string>
    <string name="others_privacy_policy">Kebijakan Privasi</string>
    <string name="others_term_of_service">Ketentuan Layanan</string>
    <string name="others_logout">Keluar</string>
    <string name="others_close">Tutup</string>

    <string name="home_promos_title">Promo saat ini</string>
    <string name="home_promos_subtitle">Dapatkan promo menarik dari Metris untuk Anda</string>
    <string name="home_beach_title">Pantai populer</string>
    <string name="home_beach_subtitle">Kunjungi pantai yang sedang populer saat ini</string>
    <string name="home_package_title">Paket destinasi</string>
    <string name="home_package_subtitle">Rencanakan perjalanan anda dengan paket terbaik</string>

    <string name="home_beach">Pantai</string>
    <string name="home_package">Paket</string>

</resources>
