<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_promos_title"
            android:textSize="10pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/home_promos_subtitle" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/home_rv_promo"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:paddingTop="5dp">

        </android.support.v7.widget.RecyclerView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/home_beach_title"
            android:textSize="10pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/home_beach_subtitle" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/home_rv_beach"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:paddingTop="5dp">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/home_package_title"
            android:textSize="10pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/home_package_subtitle" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/home_rv_package"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginBottom="100dp">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

</ScrollView>