<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/intro_slider_subtitle_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_1_textview_subtitle_1"
        android:textAlignment="center"
        android:textColor="@color/defaultText"
        android:textSize="10pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/intro_slider_subtitle_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_1_textview_subtitle_2"
        android:textAlignment="center"
        android:textColor="@color/blueText"
        android:textSize="10pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/intro_slider_content"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/intro_1_textview_content"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/intro_slider_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_tickets" />

    <Button
        android:id="@+id/intro_button_register"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/intro_button_register_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>