<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".Authorization.LoginActivity">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/login_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title_1"
                android:textAlignment="center"
                android:textSize="10pt"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title_2"
                android:textAlignment="center"
                android:textColor="@color/blueText"
                android:textSize="10pt"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_layout2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/login_layout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_layout1">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/welcomeimage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/login_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/input_hint_emai"
                    android:textSize="6pt" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:id="@+id/login_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/input_hint_password"
                    android:textSize="6pt" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/login_layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/login_layout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_layout2">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/login_forget_password"
                android:textAlignment="center"
                android:textColor="@color/blueText"
                android:textSize="6pt" />

            <Button
                android:id="@+id/login_button_login"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:text="@string/login_button_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_dont_have_account"
                android:textColor="@color/hintText"
                android:textSize="6pt" />

            <TextView
                android:id="@+id/login_textview_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/login_textview_register"
                android:textColor="@color/blueText"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>