<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/register_layout_ktp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_ktp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/input_hint_ktp"
            android:textSize="6pt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/input_hint_phone"
            android:textSize="6pt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_layout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_address" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/input_hint_address"
            android:textSize="6pt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_layout_province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_province" />

        <Spinner
            android:id="@+id/register_spinner_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/input_hint_province" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_layout_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_city" />

        <Spinner
            android:id="@+id/register_spinner_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/input_hint_city" />

    </LinearLayout>


</LinearLayout>

