<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

        <LinearLayout
            android:id="@+id/register_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/input_hint_name"
                android:textSize="6pt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/input_hint_emai"
                android:textSize="6pt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/input_hint_password"
                android:textSize="6pt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_layout_retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/input_hint_retype_password"
                android:textSize="6pt" />

        </LinearLayout>

</LinearLayout>
