<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".Authorization.RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/register_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_title_1"
                android:textAlignment="center"
                android:textSize="10pt"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_title_2"
                android:textAlignment="center"
                android:textColor="@color/blueText"
                android:textSize="10pt"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_layout2"
            android:layout_width="250dp"
            android:layout_height="320dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/register_layout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_layout1">

            <android.support.v4.view.ViewPager
                android:id="@+id/register_pager"
                android:layout_width="match_parent"
                android:layout_height="270dp">

            </android.support.v4.view.ViewPager>

            <LinearLayout
                android:id="@+id/register_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/register_layout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_layout2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/register_other_option_register"
                android:textAlignment="center"
                android:textColor="@color/hintText"
                android:textSize="6pt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/register_button_google_plus"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_google_plus" />

                <ImageView
                    android:id="@+id/register_button_facebook"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_facebook" />
            </LinearLayout>

            <Button
                android:id="@+id/register_button_register"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:text="@string/register_button_next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/register_layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/welcome_textview_already"
                android:textColor="@color/hintText"
                android:textSize="6pt" />

            <TextView
                android:id="@+id/register_textview_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/welcome_textview_login"
                android:textColor="@color/blueText"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>